-fix truncated bottom in layout

--- a/src/main/resources/VAADIN/themes/tcstatus/tcstatus.scss
+++ b/src/main/resources/VAADIN/themes/tcstatus/tcstatus.scss
@@ -49,6 +49,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
+    padding-bottom: 5px;
   }
 
   #statusView .buildStatusContainer {
